--- a/aplicacoes/Calculadora/Calculadora/appsettings.json
+++ b/aplicacoes/Calculadora/Calculadora/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=MinhaApi;User Id=sa;Password=Al235128*;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
